--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@plasmicapp/cli": "^0.1.330",
     "@plasmicapp/react-web": "^0.2.343",
-    "next": "14.2.5",
+    "next": "^16.0.10",
     "react": "^18",
     "react-dom": "^18"
   },
